fixed column width issue restricting button size on mobile

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -51,7 +51,7 @@ body {
 .answer-btn {
     margin: 10px;
     height: 70px;
-    width: 200px;
+    width: 100%;
     font-family: 'VT323', monospace;
     font-size: 1.8em;
     background-color: #ffffff;
